--- a/single_domain_movie_to_movie/recommendation.ipynb
+++ b/single_domain_movie_to_movie/recommendation.ipynb
@@ -2297,13 +2297,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Prerana\n",
-    "\n",
-    "def get_recommended_movies(user_id, num=20, verbose=False):\n",
+    "def get_recommended_movies(user_id, num=20, verbose=False, print_recommendations=False):\n",
     "    \n",
     "    # To fetch all the movies watched by a given user.\n",
     "    \n",
@@ -2377,9 +2375,9 @@
     "    sorted_recomm_movie_based_on_rating = recomm_movie_based_on_rating.sort_values(by=\"rating\", ascending=False)\n",
     "    \n",
     "    # Final top 20 movie recommendation list \n",
-    "    if verbose:\n",
+    "    if print_recommendations:\n",
     "        print(\"<<<<=====================================================================>>>>\")\n",
-    "        print(\"Final movie recommendation list for a given user is: \")\n",
+    "        print(\"Final movie recommendation list for a given user: \", user_id)\n",
     "        print(sorted_recomm_movie_based_on_rating[\"title\"][:num])\n",
     "    \n",
     "    recommended_movies_for_user = sorted_recomm_movie_based_on_rating[:num]\n",
@@ -2393,8 +2391,61 @@
     "    recall = relevant_recommended_movies_len / total_relevant_movies_len\n",
     "    return precision, recall\n",
     "\n",
-    "    \n",
-    "# get_recommended_movies(31744, 1000) #recommended movie list for user_id = 29   "
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<<<<=====================================================================>>>>\n",
+      "Final movie recommendation list for a given user:  29\n",
+      "670      Adventures of Robin Hood, The (1938)\n",
+      "4117                     Captain Blood (1935)\n",
+      "20386                    Sea Hawk, The (1940)\n",
+      "18680           Prisoner of Zenda, The (1937)\n",
+      "12996             King Solomon's Mines (1950)\n",
+      "654      Adventures of Hajji Baba, The (1954)\n",
+      "11044                        Host, The (2013)\n",
+      "23861            Three Musketeers, The (1921)\n",
+      "8455          Flame and the Arrow, The (1950)\n",
+      "5727                  Cutthroat Island (1995)\n",
+      "Name: title, dtype: object\n",
+      "<<<<=====================================================================>>>>\n",
+      "Final movie recommendation list for a given user:  46\n",
+      "24968                          Usual Suspects, The (1995)\n",
+      "19420                               Reservoir Dogs (1992)\n",
+      "6513                             Dial M for Murder (1954)\n",
+      "6148           Deadly Circuit (Mortelle randonnée) (1983)\n",
+      "11655    Illustrious Corpses (Cadaveri eccellenti) (1976)\n",
+      "8590                                     Following (1998)\n",
+      "23096                                 The 39 Steps (2008)\n",
+      "16136                 Murder on the Orient Express (1974)\n",
+      "8068                           Farewell, My Lovely (1975)\n",
+      "674             Adventures of Sherlock Holmes, The (1939)\n",
+      "Name: title, dtype: object\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1.0, 0.0008993614533681087)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Recommendations\n",
+    "get_recommended_movies(29, 10, print_recommendations=True) #recommended movie list for user_id = 29\n",
+    "get_recommended_movies(46, 10, print_recommendations=True) #recommended movie list for user_id = 46"
    ]
   },
   {
@@ -2425,7 +2476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2433,27 +2484,28 @@
      "output_type": "stream",
      "text": [
       "num movies to recommend:  1\n",
-      "mean precision:  1.0\n",
-      "mean recall:  0.00012550283957766246\n",
+      "mean precision:  0.9\n",
+      "mean recall:  0.00018930836127645432\n",
       "num movies to recommend:  5\n",
-      "mean precision:  0.86\n",
-      "mean recall:  0.0010420296465024211\n",
+      "mean precision:  0.96\n",
+      "mean recall:  0.0006600586427382548\n",
       "num movies to recommend:  10\n",
-      "mean precision:  0.79\n",
-      "mean recall:  0.0014687427922502126\n",
+      "mean precision:  0.94\n",
+      "mean recall:  0.002340193326732857\n",
       "num movies to recommend:  15\n",
-      "mean precision:  0.8266666666666667\n",
-      "mean recall:  0.004858158687448602\n",
+      "mean precision:  0.74\n",
+      "mean recall:  0.00467054699399344\n",
       "num movies to recommend:  50\n",
-      "mean precision:  0.444\n",
-      "mean recall:  0.004633274245896645\n",
+      "mean precision:  0.28600000000000003\n",
+      "mean recall:  0.0025553392550843605\n",
       "num movies to recommend:  75\n",
-      "mean precision:  0.3973333333333333\n",
-      "mean recall:  0.01329508461678498\n"
+      "mean precision:  0.2906666666666667\n",
+      "mean recall:  0.0029463175480065698\n"
      ]
     }
    ],
    "source": [
+    "# Experimentation\n",
     "import random\n",
     "from statistics import mean\n",
     "for num_movies_to_recommend in [1, 5, 10, 15, 50, 75]:\n",
